--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/redux-persist": "^4.3.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
