Add artplayer, artplayer-plugin-hls-quality, and hls.js dependencies Update epModalSlice to include player state Add Stream component to watch page Update Options component to toggle player for movies

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@types/redux-persist": "^4.3.1",
+    "artplayer": "^5.1.0",
+    "artplayer-plugin-hls-quality": "^2.0.0",
+    "hls.js": "^1.4.14",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
