--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.2",
     "swiper": "^11.0.5",
     "swr": "^2.2.4"
   },
