--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.2",
     "swiper": "^11.0.5",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@types/node": "^20",
