--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
+    "react-toastify": "^10.0.1",
     "react-top-loading-bar": "^2.3.1",
     "swiper": "^11.0.5"
   },
