--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/analytics": "^1.1.1",
     "artplayer": "^5.1.0",
     "artplayer-plugin-hls-quality": "^2.0.0",
     "hls.js": "^1.4.14",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
