--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.0.4",
     "react-toastify": "^10.0.1",
     "react-top-loading-bar": "^2.3.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
