--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/speed-insights": "^1.0.4",
     "artplayer": "^5.1.0",
     "artplayer-plugin-hls-quality": "^2.0.0",
+    "framer-motion": "^10.18.0",
     "hls.js": "^1.4.14",
     "lodash": "^4.17.21",
     "next": "14.0.4",
